// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component: DictNumberField when rendering should work with full props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Numeric value
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Field
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Field..."
      type="text"
      value="attrib"
    />
    <span
      className="nice-input-addon"
    >
      Number
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder={undefined}
      type="number"
      value={2}
    />
  </div>
</fieldset>
`;

exports[`Component: DictNumberField when rendering should work with minimum props 1`] = `
<fieldset
  className="nice-form-group"
>
  <legend>
    Numeric value
  </legend>
  <div
    className="nice-control-group"
  >
    <span
      className="nice-input-addon"
    >
      Field
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder="Field..."
      type="text"
      value=""
    />
    <span
      className="nice-input-addon"
    >
      Number
    </span>
    <input
      className="nice-form-control"
      disabled={undefined}
      onChange={[Function]}
      onKeyPress={null}
      placeholder={undefined}
      type="number"
      value={0}
    />
  </div>
</fieldset>
`;
